--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -122,7 +122,7 @@ body.shop-body {
   .shop-cart-toggle {
     width: 40px;
     height: 40px;
-    margin-right: 2px;
+    margin-right: 0;
     overflow: visible;
   }
 
